2000-04-24  Paul Eggert  <eggert@twinsun.com>

	POSIX.2 conformance fixes: grep -q now exits with status zero
	if an input line is selected, even if an error also occurs.
	grep -s no longer affects exit status.

	* src/grep.c (suppress_errors): Move definition earlier so
	that suppressible_error can use it.
	(suppressible_error): New function.
	(exit_on_match): New var.
	(grepbuf): If exit_on_match is nonzero, exit with status zero
	immediately.
	(grep, grepfile, grepdir): Invoke suppressible_error.
	(main): -q sets exit_on_match.

	* doc/grep.1, doc/grep.texi, NEWS:
	Document -q's behavior as required by POSIX.2.

	* tests/status.sh:
	Test for -q and -s behavior as conforming to POSIX.2.

2000-04-20  Paul Eggert

	* tests/Makefile.am (TESTS_ENVIRONMENT):
	Set GREP_OPTIONS to the empty string.

2000-04-20  Paul Eggert

	* tests/status.sh: Fix typo: test -b -> test -r.

2000-04-20  Paul Eggert

	* src/dfa.c (lex):
	Do not assume that [c] is equivalent to [c-c]; this isn't true
	if LC_COLLATE specifies that some characters are equivalent.
	(setbit_case_fold): New function.
	(lex): Use it to simplify the code a bit.

2000-04-17  Paul Eggert

	Do CRLF munging only if HAVE_DOS_FILE_CONTENTS, instead of
	having it depend on O_BINARY (which leads to incorrect results
	on BeOS, VMS, and MacOS).

	* bootstrap/Makefile.try (DEFS): Add -DHAVE_DOS_FILE_CONTENTS.
	* src/system.h (SET_BINARY): Define only if HAVE_DOS_FILE_CONTENTS.
	(O_BINARY): Do not define.

	* m4/dosfile.m4: Define HAVE_DOS_FILE_CONTENTS if it appears we're
	using DOS.

	* src/grep.c (undossify_input, fillbuf, dosbuf.c, prline, main):
	Depend on HAVE_DOS_FILE_CONTENTS, not O_BINARY, when handling CRLF
	matters.
	(grepfile, main): Depend on SET_BINARY, not O_BINARY, when
	handling binary files on hosts that care about text versus binary.

2000-04-17  Paul Eggert

	* lib/getpagesize.h (getpagesize): Define to B_PAGE_SIZE if
	__BEOS__ is defined.  Based on a fix by Bruno Haible
	<haible@clisp.cons.org>.
