@@ -5,6 +5,7 @@ Andreas Schwab        <schwab@suse.de>
 Andreas Ley           <andy@rz.uni-karlsruhe.de>
 Ben Elliston          <bje@cygnus.com>
 Bastiaan "Darquan" Stougie <darquan@zonnet.nl>
+Bob Proulx            <rwp@hprwp.fc.hp.com>
 Bruno Haible          <haible@ilog.fr>
 David J MacKenzie     <djm@catapult.va.pubnix.com>
 David O'Brien         <obrien@freebsd.org>
